# az

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: audio.rs  auth.rs  backup.rs  cli.rs  db.rs  derivation.rs  embeddings.rs  extractor.rs  l0.rs  l1.rs  l2.rs  l3.rs  lib.rs  main.rs  segmenter.rs  session.rs
src/llm/: mod.rs  ollama.rs
src/stt/: mod.rs  whisper.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  Login.tsx  api.ts  auth.ts  index.tsx  store.ts  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/data/: l0.sqlite  l0.sqlite.salt
ui/src-tauri/src/: lib.rs  main.rs
ui/src/views/: Capture.tsx  Captures.tsx  Dashboard.tsx  Facts.tsx  Review.tsx  Search.tsx
