[workspace]
members = ["ui/src-tauri"]

[package]
name = "az"
version = "0.1.0"
edition = "2024"
default-run = "az"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }
ctrlc = "3"
crossbeam-channel = "0.5"
cpal = "0.15"
whisper-rs = "0.13"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
ureq = { version = "2", features = ["json"] }
argon2 = "0.5"
rpassword = "7"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
httpmock = "0.7"
